Добавил проверку на звонок, и проверки на аутентифицацию

--- a/creative_shop/templates/shop_shop.html
+++ b/creative_shop/templates/shop_shop.html
@@ -70,7 +70,9 @@
     {% endfor %}
 	</div>
 </div>
-    <br><br><br><br><br><br><br><br><br><br>
+    <hr>
+    {% include "pagination/pagination.html" with page=products %}
+    <hr>
 {% endblock %}
 
 {% block scripts %}
