--- a/main_site/templates/account/user_page.html
+++ b/main_site/templates/account/user_page.html
@@ -82,21 +82,29 @@
                 <h3 class="text-center" style="border: 1px solid lightgray;  background-color: rgba(153, 153, 153, 0.5); padding: 10px 0;">Профиль</h3>
                 <div style="border: 1px solid lightgray; background-color:  rgba(207, 207, 207, 0.5); padding: 20px 0;">
                     <div class="container" style="min-height: 520px;">
-                        <div class="col-12">
+                        <form action="{% url 'update_profile' %}">
+                            <div class="col-12">
+                                {% csrf_token %}
                             <p style="margin-bottom: 20px;">Полное имя: #{ profile_content.full_name }#</p>
+                                <input type="hidden" ng-model="profile_content.id">
+                            <div class="form-group" >
+                                <label for="first_name">Фото:</label>
+                                <input type="text" name="photo" id="first_name" ng-model="profile_content.first_name">
+                            </div>
+
                             <div class="form-group" >
                                 <label for="first_name">Имя:</label>
-                                <input type="text" id="first_name" ng-model="profile_content.first_name">
+                                <input type="text" name="first_name" id="first_name" ng-model="profile_content.first_name">
                             </div>
 
                             <div class="form-group">
                                 <label for="last_name">Фамилия:</label>
-                                <input type="text" id="last_name" ng-model="profile_content.last_name">
+                                <input type="text" name="last_name" id="last_name" ng-model="profile_content.last_name">
                             </div>
 
                             <div class="form-group">
                                 <label for="email">E-mail:</label>
-                                <input type="text" id="email" ng-model="profile_content.email">
+                                <input type="text" name="email" id="email" ng-model="profile_content.email">
                             </div>
 
                             <div class="form-group">
@@ -104,8 +112,9 @@
                                 <textarea style="width: 100%;" name="bio_area" id="bio_area" rows="4" ng-model="profile_content.bio"></textarea>
                             </div>
 
-                            <div class="btn btn-success">Сохранить</div>
+                            <button class="btn btn-success">Сохранить</button>
                         </div>
+                        </form>
                     </div>
                 </div>
             </div>
