--- a/main_site/templates/account/user_page.html
+++ b/main_site/templates/account/user_page.html
@@ -88,8 +88,8 @@
                             <p style="margin-bottom: 20px;">Полное имя: #{ profile_content.full_name }#</p>
                                 <input type="hidden" ng-model="profile_content.id">
                             <div class="form-group" >
-                                <label for="first_name">Фото:</label>
-                                <input type="text" name="photo" id="first_name" ng-model="profile_content.first_name">
+                                <label for="photo_filename">Фото:</label>
+                                <input type="file" name="photo" id="photo_filename" ng-model="profile_content.first_name">
                             </div>
 
                             <div class="form-group" >
