--- a/main_site/templates/account/user_page.html
+++ b/main_site/templates/account/user_page.html
@@ -82,29 +82,28 @@
                 <h3 class="text-center" style="border: 1px solid lightgray;  background-color: rgba(153, 153, 153, 0.5); padding: 10px 0;">Профиль</h3>
                 <div style="border: 1px solid lightgray; background-color:  rgba(207, 207, 207, 0.5); padding: 20px 0;">
                     <div class="container" style="min-height: 520px;">
-                        <form action="{% url 'update_profile' %}">
+                        <form action="{% url 'update_profile' user.id %}" method="post" enctype="multipart/form-data">
                             <div class="col-12">
                                 {% csrf_token %}
-                            <p style="margin-bottom: 20px;">Полное имя: #{ profile_content.full_name }#</p>
-                                <input type="hidden" ng-model="profile_content.id">
+                                <p style="margin-bottom: 20px;">Полное имя: #{ profile_content.full_name }#</p>
                             <div class="form-group" >
                                 <label for="photo_filename">Фото:</label>
-                                <input type="file" name="photo" id="photo_filename" ng-model="profile_content.first_name">
+                                <input type="file" name="photo1" id="photo_filename" ng-model="profile_content.first_name">
                             </div>
 
                             <div class="form-group" >
                                 <label for="first_name">Имя:</label>
-                                <input type="text" name="first_name" id="first_name" ng-model="profile_content.first_name">
+                                <input type="text" name="first_name1" id="first_name" ng-model="profile_content.first_name">
                             </div>
 
                             <div class="form-group">
                                 <label for="last_name">Фамилия:</label>
-                                <input type="text" name="last_name" id="last_name" ng-model="profile_content.last_name">
+                                <input type="text" name="last_name1" id="last_name" ng-model="profile_content.last_name">
                             </div>
 
                             <div class="form-group">
                                 <label for="email">E-mail:</label>
-                                <input type="text" name="email" id="email" ng-model="profile_content.email">
+                                <input type="text" name="email1" id="email" ng-model="profile_content.email">
                             </div>
 
                             <div class="form-group">
