--- a/main_site/templates/account/user_page.html
+++ b/main_site/templates/account/user_page.html
@@ -219,11 +219,11 @@
                         </div>
                         <div class="form-group col-12">
                             <label class="label" for="photo_file">Фото<span style="color: red;">*</span></label>
-                            <input id="photo_file" name="photo_file" type="file" class="form-control" placeholder="Фото" ng-model="article_new.photo">
+                            <input id="photo_file" name="photo_file2" type="file" class="form-control" placeholder="Фото" ng-model="article_new.photo">
                         </div>
                         <div class="form-group col-12">
                             <label class="label" for="video_file">Видео</label>
-                            <input id="video_file" name="video_file" type="file" class="form-control" placeholder="Фото" ng-model="article_new.video">
+                            <input id="video_file" name="video_file2" type="file" class="form-control" placeholder="Фото" ng-model="article_new.video">
                         </div>
                         <div class="col-12">
                             <button class="btn btn-primary">Добавить</button>
