--- a/creative_blog/templates/article.html
+++ b/creative_blog/templates/article.html
@@ -21,7 +21,7 @@
                     <div class="content-grid-single">
                         <h3 style="text-align: center; color: #000; border: 1px solid lightgray;  background-color: rgba(248,19,19,0.16)">{{ article.title }}</h3>
                         <div style="border: 1px solid lightgray; background-color:  rgba(255, 255, 255, 0.5);">
-                        <p style="text-align: center;"><img src="/static/images/2.jpg" alt="" class="col-12" style="padding: 10px; height: 350px; width: 300px; align-self:center;"></p>
+                        <p style="text-align: center;"><img src="{% static article.photo %}" alt="" class="col-12" style="padding: 10px; height: 350px; width: 300px; align-self:center;"></p>
                         <p style="color: #000; padding-bottom: 15px; padding-left: 10px; padding-right: 10px;";>{{ article.text }}</p>
                     </div>
                     </div>
