--- a/main_site/templates/account/user_page.html
+++ b/main_site/templates/account/user_page.html
@@ -211,19 +211,19 @@
                         {% csrf_token %}
                         <div class="form-group col-12">
                             <label class="label" for="title">Заголовок<span style="color: red;">*</span></label>
-                            <input id="title" name="title" type="text" class="form-control" placeholder="Заголовок" ng-model="article_new.title">
+                            <input id="title" name="title" type="text" class="form-control" placeholder="Заголовок">
                         </div>
                         <div class="form-group col-12">
                             <label class="label" for="mc_text">Текст<span style="color: red;">*</span></label>
-                            <textarea id="mc_text" name="text" type="text" class="form-control" placeholder="Текст" rows="10" ng-model="article_new.text"></textarea>
+                            <textarea id="mc_text" name="text" type="text" class="form-control" placeholder="Текст" rows="10"></textarea>
                         </div>
                         <div class="form-group col-12">
-                            <label class="label" for="photo_file">Фото<span style="color: red;">*</span></label>
-                            <input id="photo_file" name="photo_file2" type="file" class="form-control" placeholder="Фото" ng-model="article_new.photo">
+                            <label class="label" for="photo_file2">Фото<span style="color: red;">*</span></label>
+                            <input id="photo_file2" name="photo_file2" type="file" class="form-control" placeholder="Фото">
                         </div>
                         <div class="form-group col-12">
-                            <label class="label" for="video_file">Видео</label>
-                            <input id="video_file" name="video_file2" type="file" class="form-control" placeholder="Фото" ng-model="article_new.video">
+                            <label class="label" for="video_file2">Видео</label>
+                            <input id="video_file2" name="video_file2" type="file" class="form-control" placeholder="Фото">
                         </div>
                         <div class="col-12">
                             <button class="btn btn-primary">Добавить</button>
